# DriverlessCarUET

./: .gitignore  README.md
01_Document/: Items.md  README.md
01_Document/Jetson-Advance/: README.md
02_Test_Src/: README.md
02_Test_Src/Lane_Center_3D/: CMakeLists.txt  Test_LaneDetection2D.cpp  Test_LaneDetection3D.cpp  Test_LaneDetection_Astra.cpp  Test_LaneDetection_CUDA.cpp  Viewer3D.cpp
02_Test_Src/Lane_Center_3D/CMakeModules/: CudaUtils.cmake
02_Test_Src/Lane_Center_3D/ImgProc/: ImgProc.cpp  ImgProc.h  LaneDetector.cpp  LaneDetector.h  types.h
02_Test_Src/Lane_Center_3D/ImgProc/cuda/: ImgProcCuda.cu  ImgProcCuda.h
02_Test_Src/Lane_center_SAC/: CMakeLists.txt  main.cpp
02_Test_Src/Test_CUDA_Compiler/: CMakeLists.txt  Test_CUDA.cpp  Test_Kalman.cpp
02_Test_Src/Test_CUDA_Compiler/ImgProc/: types.h
02_Test_Src/Test_CUDA_Compiler/ImgProc/cuda/: ImgProcCuda.cu  ImgProcCuda.h
02_Test_Src/carControl/: CMakeLists.txt
02_Test_Src/carControl/lane_detection/: CMakeLists.txt  api_lane_detection.h
02_Test_Src/carControl/main_pid/: automaticCar.cpp  checkUart.cpp  runStraight.cpp
02_Test_Src/carControl/peripheral_driver/i2c/: CMakeLists.txt  Makefile  api_i2c_pwm.cpp  api_i2c_pwm.h  pca9685.cpp
02_Test_Src/carControl/peripheral_driver/uart/: api_uart.cpp
02_Test_Src/lane_center/: CMakeLists.txt  main.cpp  polyfit.h
02_Test_Src/main_pid/: automaticCar.cpp  checkUart.cpp  hsv.cpp  runStraight.cpp  speedDown.cpp  test-steering-coef.cpp
02_Test_Src/main_pid/laneLibrary/: helper.cpp  helper.hpp  main.cpp
02_Test_Src/main_pid/tumrecorder/: CMakeCache.txt  CMakeLists.txt  Makefile  NISensorController.cpp  NISensorController.h  TumRecorder.cpp  cmake_install.cmake  tumrecorder
03_Main_Src/: README.md
03_Main_Src/LaneDetector/: CMakeLists.txt  LaneCalibration.cpp  OpenNI2_Helper.h  Recorder.cpp  Test_LaneDetection.cpp  Test_LaneDetection_Astra.cpp  Test_RunCar.cpp  testSetThetaAuto.cpp  testSetThetaManual.cpp
03_Main_Src/LaneDetector/ImgProc/: ImgProc.cpp  ImgProc.h  LaneDetector.cpp  LaneDetector.h
03_Main_Src/LaneDetector/ImgProc/cuda/: ImgProcCuda.cu  ImgProcCuda.h
03_Main_Src/LaneDetector/Utilities/: DatasetReader.cpp  DatasetReader.h
03_Main_Src/LaneDetector/peripheral_driver/i2c/: CMakeLists.txt  api_i2c_pwm.cpp  api_i2c_pwm.h  test_steering_throttle.cpp
03_Main_Src/LaneDetector/peripheral_driver/uart/: CMakeLists.txt  rs232.c
04_Release_Src/: README.md
04_Release_Src/arduino/: objectStopSonar.ino
